# FastAPI_SQLAlchemy_University

./: README.md  comand  pyproject.toml
app/: main.py
app/dao/: base.py  database.py
app/users/: auth.py  dependencies.py  router.py  schemas.py
